<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>runtime</artifactId>
    <groupId>org.assimbly</groupId>
    <version>5.1.0</version>
  </parent>

  <name>dil</name>
  <packaging>jar</packaging>

  <artifactId>dil</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <maven.versions.rules>file:///${project.basedir}/../rules.xml</maven.versions.rules>
  </properties>

  <distributionManagement> 
        <repository>
            <id>github</id> 
            <name>Temporary Staging Repository</name> 
            <url>https://maven.pkg.github.com/assimbly/runtime</url> 
        </repository> 
    </distributionManagement>

  <dependencies>
	  <dependency>
		  <groupId>xalan</groupId>
		  <artifactId>serializer</artifactId>
		  <version>${xalan.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>camel-base</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>camel-components</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>extra</artifactId>
 		  <version>${assimbly.version}</version>
	  </dependency>
    	<dependency>
			<groupId>org.assimbly</groupId>
			<artifactId>test-base</artifactId>
			<version>${assimbly.version}</version>
		</dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>utils</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>net.lingala.zip4j</groupId>
		  <artifactId>zip4j</artifactId>
		  <version>${zip4j.version}</version>
	  </dependency>
      <dependency>
          <groupId>org.apache.activemq</groupId>
          <artifactId>activemq-pool</artifactId>
          <version>${activemq.version}</version>
          <scope>compile</scope>
      </dependency>

	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>cookies</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>mail</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>multipart</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>xmltojson</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>

  </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
						<configuration>
							<toolchains>
								<jdk>
									<version>21</version>
								</jdk>
							</toolchains>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>